# wheel-package

./: .gitignore  CMakeLists.txt  test.sh
.github/workflows/: build-wheel.yml  pack-wheel.yml
scripts/: install_dep.sh  install_deps.sh
src/: CMakeLists.txt  engine.cc  engine.h
tools/: CMakeLists.txt
tools/python_bind/: CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
tools/python_bind/example/: simple_example.py
tools/python_bind/src/: nexg_binding.cc  py_engine.cc  py_engine.h
tools/python_bind/tests/: test_query.py
tools/python_bind/wheel_test/: __init__.py  engine.py  version.py
tools/python_bind/wheel_test/resources/: nexg.pb
