[tool.property]
license = "Apache 2.0"

[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.6.0", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "wheel_test"
requires-python = ">=3.8"
version = "0.1.0"
description = "GraphScope wheel_test for python"
authors = [{name="GraphScope Team", email="graphscope@alibaba-inc.com"}]
readme = "README.md"
keywords = ["Graph", "Python", "Embedded", "Graph Database"]
dependencies = [
    "pybind11>=2.9.2",
    "cibuildwheel>=2.0.0",
    "packaging>=24.2"
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "black>=23.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"
skip = ["*-musllinux_*"]
before-all = "git submodule update --init"
environment = {DEBUG=1,MACOSX_DEPLOYMENT_TARGET=15.0,DYLD_LIBRARY_PATH="/opt/graphscope/lib",CMAKE_BUILD_PARALLEL_LEVEL=16,CMAKE_PREFIX_PATH="/opt/graphscope/",LD_LIBRARY_PATH="/opt/rh/devtoolset-10/root/usr/lib64:/opt/rh/devtoolset-10/root/usr/lib:/opt/rh/devtoolset-10/root/usr/lib64/dyninst:/opt/rh/devtoolset-10/root/usr/lib/dyninst:/usr/local/lib64:/opt/graphscope/lib:/opt/graphscope/lib64",LIBRARY_PATH="/opt/graphscope/lib:/opt/graphscope/lib64"}
manylinux-x86_64-image = "registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:neug-x86_64"
manylinux-aarch64-image = "registry.cn-hongkong.aliyuncs.com/graphscope/graphscope-dev:neug-arm64"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"